# auto-builder

./: Cargo.toml  README.md
.github/workflows/: test.yml
auto-builder/: Cargo.toml  README.md
auto-builder-core/: Cargo.toml
auto-builder-core/src/: basic_builder_builder.rs  builder_builder.rs  generic_builder_builder.rs  lib.rs
auto-builder-macro/: Cargo.toml
auto-builder-macro/src/: lib.rs
auto-builder/src/: lib.rs
auto-builder/tests/: build.rs  default.rs  generic.rs
builder-derive/: Cargo.toml
builder-derive/src/: lib.rs
src/: lib.rs
