[package]
name = "auto-builder-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["builder", "design_pattern", "macro", "derive"]
description = "A derive macro to implement the builder pattern for any struct"
repository = "https://github.com/hollg/auto-builder"
documentation = "https://github.com/hollg/auto-builder"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
