[package]
name = "auto-builder-macro"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["builder", "design_pattern", "macro", "derive"]
description = "A derive macro to implement the builder pattern for any struct"
repository = "https://github.com/hollg/auto-builder"
documentation = "https://github.com/hollg/auto-builder"

[lib]
proc-macro = true


[dependencies]
auto-builder-core = { version = "0.2.0", path = "../auto-builder-core" }
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
